--- a/templates/test.html
+++ b/templates/test.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel='stylesheet' type='text/css' href='style/style.css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>{{ foo }}</h1>
+<div class=" container" ng-cloak>
+    <div class="row">
+        <div class="col-lg-1 col-xl-2"></div>
+        <div class="col-xs-12 col-sm-12 col-lg-10 col-xl-8">
+            <h1>{{ foo }}</h1>
+        </div>
+        <div class="col-lg-1 col-xl-2"></div>
+    </div>
+</div>
 </body>
 </html>
