--- a/templates/test.html
+++ b/templates/test.html
@@ -5,16 +5,14 @@
     <title>{{ d.get('title') }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel='stylesheet' type='text/css' href='style/style.css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-lg-1 col-xl-2"></div>
-        <div class="col-xs-12 col-sm-12 col-lg-10 col-xl-8">
-            <h1>{{ d.get('foo') }}</h1>
+        <div class="col-xs-12 col-sm-12 col-lg-12">
+            <h2>{{ d.get('foo') }}</h2>
             <p>
                 {{ d.get('text') }}
             </p>
@@ -26,7 +24,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6 col-md-6">
+                <div class="col-xs-8 col-md-8">
                     <table class="table table-striped table-condensed">
                         <thead>
                         <tr>
@@ -45,9 +43,28 @@
                     </table>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-xs-8 col-md-8">
+                    <div class='thumbnail'>
+                        <img src="data:image/png;base64,{{ d.get('plot2') }}" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-8 col-md-8">
+                    {{ d.get('table2html') }}
+                    <table class="table table-striped table-condensed">
+                        {% for row in d.get('table2') %}
+                        <tr>
+                            {% for cell in row %}
+                            <td>{{ cell }}</td>
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+                    </table>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-1 col-xl-2"></div>
     </div>
 </div>
 </body>
