--- a/templates/test.html
+++ b/templates/test.html
@@ -64,6 +64,13 @@
                     </table>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xs-8 col-md-8">
+                    <div class='thumbnail'>
+                        <img src="data:image/png;base64,{{ d.get('plot3') }}" />
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
